Incorporated domain objects into persistency